Methods received more logic - showTwoNewRandomCards(), after testing no duplicate cards are shown - Added Log to se which cards are randomized - fixed string typo in createDeck() -> solved randomisation of cards images, sometimes it another resource image. - added more todos - added progressbar with no logic

--- a/app/src/main/res/layout/activity_start_game.xml
+++ b/app/src/main/res/layout/activity_start_game.xml
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/progressBar1"
+        android:id="@+id/game_progressbar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
