--- a/app/src/main/res/layout/activity_start_game.xml
+++ b/app/src/main/res/layout/activity_start_game.xml
@@ -77,6 +77,7 @@
         android:layout_marginHorizontal="50dp"
         android:layout_marginStart="49dp"
         android:layout_marginEnd="49dp"
+        android:indeterminateTint="@color/white"
         android:layout_marginBottom="96dp"
         android:progress="87"
         app:layout_constraintBottom_toTopOf="@+id/btn_higher"
