--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -10,7 +10,7 @@
 
 
     <TextView
-        android:id="@+id/tv_game_over"
+        android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
@@ -24,10 +24,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="76dp"
         android:text="your final score was: "
-        app:layout_constraintStart_toStartOf="@+id/tv_game_over"
-        app:layout_constraintTop_toBottomOf="@+id/tv_game_over" />
+        app:layout_constraintStart_toStartOf="@+id/tv_text"
+        app:layout_constraintTop_toBottomOf="@+id/tv_text" />
 
     <Button
         android:id="@+id/btn_back_to_menu"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="9dp"
         android:layout_marginTop="81dp"
-        app:layout_constraintStart_toStartOf="@+id/tv_game_over"
+        app:layout_constraintStart_toStartOf="@+id/tv_text"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/joker" />
 </androidx.constraintlayout.widget.ConstraintLayout>
