--- a/app/src/main/res/layout-land/activity_start_game.xml
+++ b/app/src/main/res/layout-land/activity_start_game.xml
@@ -13,9 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="145dp"
+        android:layout_marginTop="34dp"
+        app:layout_constraintEnd_toStartOf="@+id/btn_low"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/game_progressbar"
         app:srcCompat="@drawable/card_diamond_10" />
 
     <ImageView
@@ -23,29 +25,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/image_left_card"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/image_left_card"
+        app:layout_constraintStart_toEndOf="@+id/btn_low"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back_card" />
 
     <Button
         android:id="@+id/btn_higher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
+        android:layout_marginBottom="32dp"
         android:text="Higher"
-        app:layout_constraintStart_toStartOf="@+id/btn_low"
-        app:layout_constraintTop_toBottomOf="@+id/game_progressbar" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_low"
+        app:layout_constraintEnd_toEndOf="@+id/btn_low" />
 
     <Button
         android:id="@+id/btn_low"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="80dp"
         android:text="Lower"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_higher" />
+        app:layout_constraintBottom_toTopOf="@+id/tv_score"
+        app:layout_constraintEnd_toStartOf="@+id/image_right_card"
+        app:layout_constraintStart_toEndOf="@+id/image_left_card"
+        app:layout_constraintTop_toTopOf="@+id/image_left_card" />
 
     <TextView
         android:id="@+id/textView"
@@ -60,10 +66,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="16dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btn_higher"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
@@ -74,10 +80,10 @@
         android:layout_marginHorizontal="50dp"
         android:layout_marginStart="49dp"
         android:layout_marginEnd="49dp"
-        android:layout_marginBottom="268dp"
+        android:layout_marginBottom="34dp"
         android:indeterminateTint="@color/white"
         android:progress="87"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/image_right_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
