--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/rules"
+        android:id="@+id/btn_rules"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -36,7 +36,7 @@
         android:layout_marginEnd="6dp"
         android:text="About Us"
         app:layout_constraintEnd_toEndOf="@+id/startGame"
-        app:layout_constraintTop_toBottomOf="@+id/rules" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_rules" />
 
     <ImageView
         android:id="@+id/imageView2"
