Updated layout in RulesActivity - layout is more looking nice, not shrunken nor distorted - DataManager received a method that shows cards and values in all order + no duplicates 1-13 - minor change in RecycleCardAdapter that shows the value of the card shown

--- a/app/src/main/res/layout-sw600dp/activity_rules.xml
+++ b/app/src/main/res/layout-sw600dp/activity_rules.xml
@@ -41,6 +41,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="#FF0000"
         android:id="@+id/rv_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
