--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/game_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#36801D"
@@ -29,12 +29,12 @@
         app:layout_constraintTop_toBottomOf="@+id/startGame" />
 
     <Button
-        android:id="@+id/aboutUs"
+        android:id="@+id/btn_facts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="6dp"
-        android:text="About Us"
+        android:text="Fun facts"
         app:layout_constraintEnd_toEndOf="@+id/startGame"
         app:layout_constraintTop_toBottomOf="@+id/btn_rules" />
 
