--- a/app/src/main/res/layout-land/activity_game_over.xml
+++ b/app/src/main/res/layout-land/activity_game_over.xml
@@ -11,11 +11,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_large"
-        android:src="@drawable/joker"
+        android:layout_width="@dimen/image_size_thumbnail_large"
+        android:layout_height="@dimen/image_size_thumbnail_large"
+        android:layout_marginTop="@dimen/margin_small"
         android:contentDescription="@string/imagetodisplay"
+        android:src="@drawable/joker"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -24,9 +24,10 @@
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_large"
+        android:layout_marginTop="@dimen/margin_small"
         android:text="@string/game_over_well_played"
         android:textColor="@color/black"
+        android:textSize="@dimen/text_size_small"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -38,15 +39,16 @@
         android:layout_marginTop="@dimen/margin_medium"
         android:text="@string/your_final_score_was"
         android:textColor="@color/black"
+        android:textSize="@dimen/text_size_small"
         app:layout_constraintTop_toBottomOf="@id/tv_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_back_to_menu"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/button_large_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_large"
+        android:layout_marginBottom="@dimen/margin_medium"
         android:text="@string/return_to_main"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
