--- a/app/src/main/res/layout-land/activity_start_game.xml
+++ b/app/src/main/res/layout-land/activity_start_game.xml
@@ -1,100 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/game_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#36801D"
+    android:background="@color/light_green"
     tools:context=".StartGameActivity">
 
-    <ImageView
-        android:id="@+id/image_left_card"
+    <TextView
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="34dp"
-        app:layout_constraintEnd_toStartOf="@+id/btn_low"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/game_progressbar"
-        app:srcCompat="@drawable/card_diamond_10" />
-
-    <ImageView
-        android:id="@+id/image_right_card"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn_low"
+        android:layout_marginTop="@dimen/margin_mini"
+        android:text="@string/higher_or_lower"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_medium"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back_card" />
-
-    <Button
-        android:id="@+id/btn_higher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:text="Higher"
-        app:layout_constraintBottom_toTopOf="@+id/btn_low"
-        app:layout_constraintEnd_toEndOf="@+id/btn_low" />
-
-    <Button
-        android:id="@+id/btn_low"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="80dp"
-        android:text="Lower"
-        app:layout_constraintBottom_toTopOf="@+id/tv_score"
-        app:layout_constraintEnd_toStartOf="@+id/image_right_card"
-        app:layout_constraintStart_toEndOf="@+id/image_left_card"
-        app:layout_constraintTop_toTopOf="@+id/image_left_card" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:text="SCORE:"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_score"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/btn_higher"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ProgressBar
         android:id="@+id/game_progressbar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="50dp"
-        android:layout_marginStart="49dp"
-        android:layout_marginEnd="49dp"
-        android:layout_marginBottom="34dp"
+        android:layout_marginHorizontal="@dimen/margin_large"
+        android:layout_marginBottom="@dimen/margin_large"
         android:indeterminateTint="@color/white"
         android:progress="87"
-        app:layout_constraintBottom_toTopOf="@+id/image_right_card"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/image_left_card"
+        android:layout_width="@dimen/image_size_thumbnail_large"
+        android:layout_height="@dimen/image_size_thumbnail_large"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_large"
+        android:contentDescription="@string/image_of_left_card"
+        android:src="@drawable/card_diamond_10"
+        app:layout_constraintTop_toBottomOf="@id/game_progressbar"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/image_right_card"
+        android:layout_width="@dimen/image_size_thumbnail_large"
+        android:layout_height="@dimen/image_size_thumbnail_large"
+        android:layout_marginEnd="@dimen/margin_small"
+        android:contentDescription="@string/image_of_right_card"
+        android:src="@drawable/back_card"
+        app:layout_constraintTop_toTopOf="@id/image_left_card"
+        app:layout_constraintBottom_toBottomOf="@id/image_left_card"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btn_higher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/higher"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_small"
+        app:layout_constraintStart_toEndOf="@id/image_left_card"
+        app:layout_constraintEnd_toStartOf="@id/image_right_card"
+        app:layout_constraintTop_toTopOf="@id/image_left_card"
+        app:layout_constraintHorizontal_chainStyle="packed" />
+
+    <Button
+        android:id="@+id/btn_low"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lower"
+        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_small"
+        app:layout_constraintStart_toEndOf="@id/image_left_card"
+        app:layout_constraintEnd_toStartOf="@id/image_right_card"
+        app:layout_constraintTop_toBottomOf="@id/btn_higher" />
 
     <TextView
         android:id="@+id/tv_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="39dp"
-        android:text="0"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginBottom="@dimen/margin_small"
+        android:text="@string/dummy_data_score"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
