--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,46 +5,41 @@
     android:id="@+id/game_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#36801D"
+    android:background="@color/light_green"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/startGame"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="315dp"
-        android:text="Start Game"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_extra_large"
+        android:text="@string/start_game"
+        app:layout_constraintTop_toBottomOf="@id/image_app_icon"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.6" />
 
     <Button
         android:id="@+id/btn_rules"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:text="Rules"
-        app:layout_constraintStart_toStartOf="@+id/startGame"
-        app:layout_constraintTop_toBottomOf="@+id/startGame" />
-
-    <Button
-        android:id="@+id/btn_facts"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="6dp"
-        android:text="Fun facts"
-        app:layout_constraintEnd_toEndOf="@+id/startGame"
-        app:layout_constraintTop_toBottomOf="@+id/btn_rules" />
+        android:layout_marginHorizontal="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_large"
+        android:text="@string/rules"
+        app:layout_constraintTop_toBottomOf="@id/startGame"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/image_app_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="135dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="@dimen/margin_extra_large"
+        android:contentDescription="@string/imagetodisplay"
+        app:srcCompat="@drawable/cards_deck"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/cards_deck" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498" />
 </androidx.constraintlayout.widget.ConstraintLayout>
