--- a/app/src/main/res/layout/activity_start_game.xml
+++ b/app/src/main/res/layout/activity_start_game.xml
@@ -5,15 +5,15 @@
     android:id="@+id/game_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#36801D"
+    android:background="@color/light_green"
     tools:context=".StartGameActivity">
 
     <ImageView
         android:id="@+id/image_left_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="145dp"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_extra_large"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/card_diamond_10" />
@@ -22,72 +22,76 @@
         android:id="@+id/image_right_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_mini"
+        app:layout_constraintTop_toTopOf="@+id/image_left_card"
         app:layout_constraintBottom_toBottomOf="@+id/image_left_card"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/image_left_card"
         app:srcCompat="@drawable/back_card" />
 
-    <Button
-        android:id="@+id/btn_higher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
-        android:text="Higher"
-        app:layout_constraintStart_toStartOf="@+id/btn_low"
-        app:layout_constraintTop_toBottomOf="@+id/game_progressbar" />
-
-    <Button
-        android:id="@+id/btn_low"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="37dp"
-        android:text="Lower"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_higher" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:text="SCORE:"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_score"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="54dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/margin_large"
+        android:text="@string/higher_or_lower"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_medium"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
     <ProgressBar
         android:id="@+id/game_progressbar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="50dp"
-        android:layout_marginStart="49dp"
-        android:layout_marginEnd="49dp"
-        android:layout_marginBottom="268dp"
+        android:layout_marginHorizontal="@dimen/margin_large"
+        android:layout_marginBottom="300dp"
         android:indeterminateTint="@color/white"
         android:progress="87"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <Button
+        android:id="@+id/btn_higher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:text="@string/higher"
+        app:layout_constraintTop_toBottomOf="@+id/game_progressbar"
+        app:layout_constraintStart_toStartOf="@+id/btn_low" />
+
+    <Button
+        android:id="@+id/btn_low"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_large"
+        android:text="@string/lower"
+        app:layout_constraintTop_toBottomOf="@+id/btn_higher"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_small"
+        android:text=""
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_score"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="39dp"
-        android:text="0"
+        android:layout_marginStart="@dimen/margin_mini"
+        android:layout_marginBottom="@dimen/margin_medium"
+        android:text="@string/dummy_data_score"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView" />
 
