--- a/app/src/main/res/layout/custom_snackbar_layout.xml
+++ b/app/src/main/res/layout/custom_snackbar_layout.xml
@@ -4,7 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp"
+    android:padding="@dimen/padding_small"
     android:background="@color/purple"
     android:gravity="center_vertical"
     >
@@ -20,10 +20,10 @@
         android:id="@+id/custom_snack_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hiding card was:"
+        android:text="@string/hiding_card_was"
         android:textColor="@color/white"
-        android:layout_marginStart="16dp"
-        android:textSize="16sp"/>
+        android:layout_marginStart="@dimen/margin_mini"
+        android:textSize="@dimen/text_size_small"/>
 
 
 
