--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -3,8 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="16dp"
+    app:cardCornerRadius="@dimen/corner_radius_mini"
     android:background="@color/purple"
     >
 
@@ -13,14 +12,15 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:padding="5dp"
+        android:padding="@dimen/padding_tiny"
         android:gravity="center">
 
         <ImageView
             android:id="@+id/toast_card_image"
             android:layout_width="38dp"
             android:layout_height="38dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/margin_tiny"
+            android:contentDescription="@string/image_description"
             android:src="@drawable/card_club_2"
             />
 
@@ -28,10 +28,10 @@
             android:id="@+id/toast_card_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="card value and suit"
-            android:textSize="16sp"
+            android:text="@string/card_value_and_suit"
+            android:textSize="@dimen/text_size_small"
             android:textColor="@color/white"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="@dimen/margin_mini"
             />
 
     </LinearLayout>
