--- a/app/src/main/res/layout/custom_snackbar_layout.xml
+++ b/app/src/main/res/layout/custom_snackbar_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/custom_snack_layout"
     android:orientation="horizontal"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="@dimen/padding_small"
     android:background="@color/purple"
@@ -24,7 +24,5 @@
         android:textColor="@color/white"
         android:layout_marginStart="@dimen/margin_mini"
         android:textSize="@dimen/text_size_small"/>
-
-
 
 </LinearLayout>
